--- a/auth/materials-demo/index.html
+++ b/auth/materials-demo/index.html
@@ -70,7 +70,7 @@
     <!-- Add Bootstrap JS and your custom scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
-    <script src="app.js"></script>
+    <script src="./app.js"></script>
 
     <script>
         document.getElementById("btn-copy-token").addEventListener("click", function () {
